# parallel-file-indexer

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: benchmark_results.md  generate_dataset.py
include/file_indexer/: FileProcessor.hpp  FileScanner.hpp  InvertedIndex.hpp  MetadataStore.hpp  QueryProcessor.hpp  SearchEngine.hpp  ThreadPool.hpp  Tokenizer.hpp  Types.hpp
sample-data/: notes.txt  readme.md
src/: FileProcessor.cpp  FileScanner.cpp  InvertedIndex.cpp  MetadataStore.cpp  QueryProcessor.cpp  SearchEngine.cpp  ThreadPool.cpp  Tokenizer.cpp  main.cpp
